code fixes, items aligned properly

--- a/socialmediav1/src/components/Feed/feed.css
+++ b/socialmediav1/src/components/Feed/feed.css
@@ -4,8 +4,11 @@
   list-style: none;
 }
 .feed {
-  display: flex;
-  flex: 25%;
+  align-items: center;
+  flex: 60%;
+  justify-content: space-around;
+  padding: 50px;
+  padding-top: 0px;
   height: 100vh;
 }
 .feedWrapper {
