--- a/socialmediav1/src/components/Rightbar/rightbar.css
+++ b/socialmediav1/src/components/Rightbar/rightbar.css
@@ -1,5 +1,5 @@
 .rightbar {
   display: flex;
-  flex: 5%;
-  height: 100vh;
+  flex: 20%;
+  height: 100%;
 }
