--- a/socialmediav1/src/components/Shared/Shared.css
+++ b/socialmediav1/src/components/Shared/Shared.css
@@ -6,6 +6,7 @@
   height: 150px;
   border-radius: 10px;
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.6);
+  align-items: center;
 }
 .shareWrapper {
   padding: 10px;
