--- a/socialmediav1/src/components/Sidebar/sidebar.css
+++ b/socialmediav1/src/components/Sidebar/sidebar.css
@@ -6,7 +6,7 @@
 }
 .sidebar {
   display: flex;
-  flex: 3%;
+  flex: 20%;
   height: 100vh;
   overflow-y: scroll;
 }
